# asef-agentic-test-factory

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PLANEJAMENTO_MESTRE.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
book/: PROVENANCE.md  README.md  source-map.md
concepcao/: AI_Software_Engineering_Factory_Planejamento.md  README.md  Revisao_Arquitetural_ASEF.md  Templates.md  master_plan.md  timeline.md
datasets/: README.md
docs/: GOVERNANCA_DOCUMENTAL.md  PROJECT_MAP.md
examples/: multilanguage-arithmetic-metamorphic.json
examples/python-alpha/quality_conformance/: manifest.json  pyproject.toml
examples/python-alpha/quality_conformance/src/quality_fixture/: __init__.py  calculator.py
examples/python-alpha/quality_conformance/tests/: test_calculator.py
journal/: 2026-07-11-etapa-01-visao-dominio-escopo.md  2026-07-11-etapa-02-contratos-workflow-avaliacao.md  2026-07-11-marco-zero.md  2026-07-12-etapa-03-primeiros-spikes.md  2026-07-12-etapa-04-planejamento-walking-skeleton.md  2026-07-13-etapa-04-auditoria-gate.md  2026-07-13-etapa-04-hardening-pre-gate.md  2026-07-13-etapa-05-incremento-51.md  2026-07-13-etapa-05-incremento-52.md  2026-07-13-etapa-05-planejamento-alpha-python.md  2026-07-13-relato-qa-pos-etapa-04.md  2026-07-14-etapa-05-incremento-53-hardening.md  2026-07-14-etapa-05-incremento-54-live-adapter.md  2026-07-15-etapa-05-planejamento-incremento-55.md  2026-07-15-etapa-05-planejamento-incremento-56.md  2026-07-15-etapa-05-planejamento-incremento-57.md  2026-07-15-inicio-dia-06.md  2026-07-16-etapa-05-incremento-572-security-dataset.md  2026-07-16-etapa-05-incremento-573-docker-lifecycle.md  2026-07-16-etapa-05-incremento-574-doctor.md  2026-07-16-etapa-05-incremento-575-cleanup.md  2026-07-16-etapa-05-incremento-576-ci-candidata.md  2026-07-16-etapa-05-incremento-581-report-contract.md  2026-07-16-etapa-05-incremento-582-report-publication.md  2026-07-16-etapa-05-inicio-incremento-57-fatia-571.md  2026-07-16-etapa-05-planejamento-incremento-58.md  2026-07-17-etapa-05-candidata-corretiva-a7.md  2026-07-17-etapa-05-incremento-583-jornada-publica.md  2026-07-17-etapa-05-incremento-584-arquitetura-contribuicao.md  2026-07-17-etapa-05-incremento-585-experiencia-instalada.md  2026-07-17-etapa-05-incremento-586-revisao-candidata.md  2026-07-17-etapa-05-incremento-591-inventario-protocolo.md  2026-07-17-etapa-05-incremento-592-preflight-kit.md  2026-07-17-etapa-05-planejamento-incremento-59.md  2026-07-18-etapa-05-gate-05-aprovado.md  2026-07-18-etapa-05-incremento-595.md  2026-07-18-etapa-05-incremento-596-candidata-gate.md  2026-07-18-etapa-05-incrementos-593-594.md  2026-07-18-etapa-05-publicacao-postflight-a7.md  2026-07-18-etapa-05-reconciliacao-documental-pre-593.md  (+15 more)
spikes/: langgraph_spike.py  pydantic_ai_spike.py  requirements-langgraph.txt  requirements-pydantic-ai.txt  test_langgraph_spike.py  test_pydantic_ai_spike.py
tests/: test_alpha_contracts.py  test_alpha_evaluation.py  test_alpha_report_publication.py  test_attempt_store.py  test_backend_api.py  test_backend_api_conformance.py  test_budgets.py  test_capability_api_run.py  test_capability_java_unit_run.py  test_capability_web_ui_run.py  test_cleanup_runner.py  test_cli_exit_matrix.py  test_complete_workflow.py  test_context.py  test_correction_loop.py  test_docker_api_fixture.py  test_docker_runner.py  test_docs_check.py  test_doctor_runner.py  test_execute_generated.py  test_gate5_evidence_check.py  test_gateway.py  test_generate_unit.py  test_human_checkpoint.py  test_human_workflow.py  test_java_unit.py  test_java_unit_conformance.py  test_java_unit_execution.py  test_java_unit_toolchain.py  test_language_profiles.py  test_live_agent.py  test_observability.py  test_openapi_contracts.py  test_oracle_evaluation.py  test_oracle_execution.py  test_prepare_run.py  (+24 more)
(+464 files in other folders)
