[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "asef-agentic-test-factory"
version = "0.1.0a1"
description = "Context-aware, policy-controlled Agentic Test Factory for Quality Engineering"
readme = "README.md"
license = "MIT"
authors = [{ name = "Lucas Teixeira" }]
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
workflow-langgraph = [
  "langgraph==1.2.9",
  "langgraph-checkpoint-sqlite==3.1.0",
]

[project.scripts]
asef = "asef.cli:main"
asef-spike = "asef.legacy.cli:main"

[project.urls]
Homepage = "https://github.com/lucasteixeirati/asef-agentic-test-factory"
Repository = "https://github.com/lucasteixeirati/asef-agentic-test-factory"
Issues = "https://github.com/lucasteixeirati/asef-agentic-test-factory/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/asef"]

[tool.pytest.ini_options]
testpaths = ["tests"]
