[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "asef-agentic-test-factory"
version = "0.1.0a5"
description = "Context-aware, policy-controlled Agentic Test Factory for Quality Engineering"
readme = "README.md"
license = "MIT"
authors = [{ name = "Lucas Teixeira" }]
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
test = [
  "coverage==7.10.7",
]
mutation = [
  "mutmut==3.6.0",
]
workflow-langgraph = [
  "langgraph==1.2.9",
  "langgraph-checkpoint-sqlite==3.1.0",
]

[project.scripts]
asef = "asef.cli:main"
asef-spike = "asef.legacy.cli:main"

[project.urls]
Homepage = "https://github.com/lucasteixeirati/asef-agentic-test-factory"
Repository = "https://github.com/lucasteixeirati/asef-agentic-test-factory"
Issues = "https://github.com/lucasteixeirati/asef-agentic-test-factory/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/asef"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["asef"]
omit = [
  "src/asef/legacy/*",
  "src/asef/adapters/langgraph_checkpoint.py",
  "src/asef/application/human_decision.py",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true

[tool.mutmut]
source_paths = [
  "src/asef/runtime/",
  "src/asef/outcomes.py",
]
also_copy = [
  "src/asef/__init__.py",
  "src/asef/contracts.py",
  "src/asef/legacy/",
  "examples/state/",
]
pytest_add_cli_args_test_selection = [
  "tests/test_budgets.py",
  "tests/test_skeleton_contracts.py",
]
mutate_only_covered_lines = true
